# Lucis

./: .gitignore  CMakeLists.txt  ERROR_SYSTEM_PLAN.md  Makefile  PLANO-IMPORT.md  README.md  compile_commands.json  map.md  notes.md
docs/: index.md
fuzzer/: .gitignore  CMakeLists.txt  Makefile  corpus.cpp  corpus.hpp  main.cpp  mutator.cpp  mutator.hpp  result.cpp  result.hpp  runner.cpp  runner.hpp
grammar/: LucisLexer.g4  LucisParser.g4  LuxLexer.g4  LuxParser.g4
lsp_tests/: test_attr_completions.py  test_cfg_lsp.py
releases/: v0.0.1-beta.md  v0.0.2-beta.md
stdlib/: cli.lc  container.lc  core.lc  lcli.lc  result.lc  stdio.lc  terminal.lc
stdlib.bak/: stdio.lc
tests/: array_features_full.lc  array_features_full.lx  array_types.lc  array_types.lx  atomic_ordering.lc  bool_types.lc  bool_types.lx  char_methods_extra.lc  char_methods_extra.lx  char_types.lc  char_types.lx  concurrency_mutex_lock.lc  concurrency_mutex_lock.lx  concurrency_spawn_await.lc  concurrency_spawn_await.lx  concurrency_thread_utils.lc  concurrency_thread_utils.lx  const_features.lc  control_flow_break_continue.lc  control_flow_break_continue.lx  control_flow_conditionals_loops.lc  control_flow_error_handling.lc  (+103 more)
tests.bak/: array_features_full.lc  char_types.lc  concurrency_mutex_lock.lc  enum_payload_is.lc  enum_unit_switch.lc  float_types.lc  generics_user_types.lc  propagate_operator.lc  ranges_full.lc  string_types.lc  structs_pointers.lc  sys_bitops.lc  sys_cpu.lc  sys_fence.lc  sys_prefetch.lc  sys_stack.lc  sys_syscall.lc  sys_volatile.lc  type_aliases_full.lc  uint_types.lc
(+288 files in other folders)
